src/main/gitops/argocd/infra/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    openshift.io/description: ""
    openshift.io/display-name: "Demo CI "
  name: demo-ci
